[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]
[ext_resource path="res://src/models/game/Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/models/ui/MessageHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/models/dao/ui/RankList.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Game" parent="." instance=ExtResource( 2 )]

[node name="MessageHUD" parent="." instance=ExtResource( 3 )]

[node name="RankList" parent="." instance=ExtResource( 4 )]

[node name="GameOverTimer" type="Timer" parent="."]

[node name="NextGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -139.5
margin_top = -308.5
margin_right = 118.5
margin_bottom = -182.5
custom_fonts/font = SubResource( 1 )
text = "Restart"

[connection signal="game_over" from="Game" to="." method="_on_Game_game_over"]
[connection signal="music_changed" from="MessageHUD" to="." method="_on_MessageHUD_music_changed"]
[connection signal="start_game" from="MessageHUD" to="." method="_on_MessageHUD_start_game"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="button_up" from="NextGameButton" to="." method="_on_NextGameButton_button_up"]
